<resources>
    <string name="app_name">TV Wheel Keyboard</string>
    <string name="keyboard_label">TV Wheel Keyboard</string>
    <string name="subtype_label">English (US)</string>
    <string name="setup_title">TV Wheel Keyboard</string>
    <string name="setup_body">Enable the keyboard in Android settings, then choose it as your current input method.</string>
    <string name="enable_keyboard">1. Enable keyboard</string>
    <string name="choose_keyboard">2. Choose keyboard</string>
    <string name="voice_permission">Grant microphone permission for Voice Search</string>
    <string name="update_available_title">Update available</string>
    <string name="update_available_body">Version %1$s is available. You are running %2$s.</string>
    <string name="update_install">Open update</string>
</resources>
